fixed image on blog page, but it's optimization is breaking on mobile.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,9 @@
 @import "mixins";
 @import "variables"; 
 
-
+.main {
+    background-color: $bg-gradient; 
+}
 .home-main {
     width: 100%; 
     padding: 2.5rem 0; 
