--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,3 +3,7 @@ $font-dark:  rgba(12, 0, 0, 0.671);
 $font-hover: #FBC403;
 $font-sm: 12px; 
 $font-lg: 1.5rem; 
+
+$background: #FBFCD4; 
+$bg-gradient: rgba(255, 255, 255, 0.884); 
+$bg-info: #17a2b8; 
