--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,9 @@
+
 html,
 body {
   padding: 0;
   margin: 0;
+  background: #FBFCD4; 
 }
 
 a {
